@@ -1,3 +1,9 @@
+Wed Feb 24 20:05:40 1999  Tom Yu  <tlyu@mit.edu>
+
+	* klogind.M: Resync manpage.
+
+	* krlogind.c: Rework flags for hostname logging.
+
 Mon Feb 22 22:26:32 1999  Tom Yu  <tlyu@mit.edu>
 
 	* kcmd.c (kcmd): Fix up to not call sname_to_principal until after
